# RISA

./: .gitignore  .gitlab-ci.yml  README.md
RISA/: CMakeLists.txt  Doxyfile.in
RISA/ddrf/: CMakeLists.txt
RISA/ddrf/include/ddrf/: CircularBuffer.h  Filesystem.h  Image.h  ImageLoader.h  ImageSaver.h  Memory.h  MemoryPool.h  Queue.h  Singleton.h  Volume.h
RISA/ddrf/include/ddrf/cuda/: Check.h  Coordinates.h  DeviceMemoryManager.h  HostMemoryManager.h  Launch.h  Memory.h
RISA/ddrf/include/ddrf/default/: Memory.h  MemoryManager.h
RISA/ddrf/include/ddrf/imageLoaders/HIS/: HIS.h  HISHeader.h
RISA/ddrf/include/ddrf/imageLoaders/TIFF/: TIFF.h
RISA/ddrf/include/ddrf/imageSavers/TIFF/: TIFF.h
RISA/ddrf/include/ddrf/observer/: Observer.h  Subject.h
RISA/ddrf/include/ddrf/pipeline/: InputSide.h  OutputSide.h  Pipeline.h  Port.h  SinkStage.h  SourceStage.h  Stage.h
RISA/ddrf/src/: Filesystem.cpp
RISA/ddrf/src/observer/: Subject.cpp
RISA/example/: CMakeLists.txt  config.cfg  fbp.cpp  main.cpp  main.cu
RISA/glados/: CMakeLists.txt
RISA/glados/include/glados/: CircularBuffer.h  Filesystem.h  Image.h  ImageLoader.h  ImageSaver.h  Memory.h  MemoryPool.h  Queue.h  Singleton.h  Volume.h
RISA/glados/include/glados/cuda/: Check.h  Coordinates.h  DeviceMemoryManager.h  HostMemoryManager.h  Launch.h  Memory.h
RISA/glados/include/glados/default/: Memory.h  MemoryManager.h
RISA/glados/include/glados/imageLoaders/HIS/: HIS.h  HISHeader.h
RISA/glados/include/glados/imageLoaders/TIFF/: TIFF.h
RISA/glados/include/glados/imageSavers/TIFF/: TIFF.h
RISA/glados/include/glados/observer/: Observer.h  Subject.h
RISA/glados/include/glados/pipeline/: InputSide.h  OutputSide.h  Pipeline.h  Port.h  SinkStage.h  SourceStage.h  Stage.h
RISA/glados/src/: Filesystem.cpp
RISA/glados/src/observer/: Subject.cpp
RISA/risaLib/: CMakeLists.txt
RISA/risaLib/include/risa/Attenuation/: Attenuation.h
RISA/risaLib/include/risa/Backprojection/: Backprojection.h
RISA/risaLib/include/risa/Basics/: performance.h
RISA/risaLib/include/risa/ConfigReader/: ConfigReader.h  read_json.hpp
RISA/risaLib/include/risa/Copy/: D2H.h  H2D.h
RISA/risaLib/include/risa/CropImage/: CropImage.h
RISA/risaLib/include/risa/DetectorInterpolation/: DetectorInterpolation.h
RISA/risaLib/include/risa/Fan2Para/: Fan2Para.h
RISA/risaLib/include/risa/Filter/: Filter.h
RISA/risaLib/include/risa/Loader/: OfflineLoader.h  OfflineLoader_perfTest.h  TiffLoader.h
RISA/risaLib/include/risa/Masking/: Masking.h
RISA/risaLib/include/risa/Receiver/: OnlineReceiverNotification.h  Receiver.h
RISA/risaLib/include/risa/ReceiverModule/: ReceiverModule.h
RISA/risaLib/include/risa/Reordering/: Reordering.h
RISA/risaLib/include/risa/Saver/: OfflineSaver.h
RISA/risaLib/include/risa/UDPServer/: UDPServer.h
RISA/risaLib/include/risa/template/: Template.h
RISA/risaLib/src/Attenuation/: Attenuation.cu
RISA/risaLib/src/Backprojection/: Backprojection.cu
RISA/risaLib/src/ConfigReader/: ConfigReader.cpp
RISA/risaLib/src/Copy/: D2H.cu  H2D.cu
RISA/risaLib/src/CropImage/: CropImage.cu
RISA/risaLib/src/DetectorInterpolation/: DetectorInterpolation.cu  interpolationFunctions.h
RISA/risaLib/src/Fan2Para/: Fan2Para.cu  cuda_kernels_fan2para.h
RISA/risaLib/src/Filter/: Filter.cu  cuda_kernels_filter.h
RISA/risaLib/src/Loader/: OfflineLoader.cu  OfflineLoader_perfTest.cu  TiffLoader.cpp
RISA/risaLib/src/Masking/: Masking.cu
RISA/risaLib/src/Reordering/: Reordering.cu
RISA/risaLib/src/Saver/: OfflineSaver.cu
RISA/risaLib/src/UDPReceiver/Receiver/: Receiver.cpp
RISA/risaLib/src/UDPReceiver/ReceiverModule/: ReceiverModule.cpp
RISA/risaLib/src/UDPReceiver/UDPServer/: UDPServer.cpp
RISA/risaLib/src/template/: Template.cu
docs/: _attenuation_8cu.html  _attenuation_8cu.js  _attenuation_8cu__incl.map  _attenuation_8cu__incl.md5  _attenuation_8cu_source.html  _attenuation_8h.html  _attenuation_8h.js  _attenuation_8h__dep__incl.map  _attenuation_8h__dep__incl.md5  _attenuation_8h__incl.map  _attenuation_8h__incl.md5  _attenuation_8h_source.html  _backprojection_8cu.html  _backprojection_8cu.js  _backprojection_8cu__incl.map  _backprojection_8cu__incl.md5  _backprojection_8cu_source.html  _backprojection_8h.html  _backprojection_8h.js  _backprojection_8h__dep__incl.map  _backprojection_8h__dep__incl.md5  _backprojection_8h__incl.map  _backprojection_8h__incl.md5  _backprojection_8h_source.html  _check_8h.html  _check_8h.js  _check_8h__dep__incl.map  _check_8h__dep__incl.md5  _check_8h__incl.map  _check_8h__incl.md5  _check_8h_source.html  _circular_buffer_8h.html  _circular_buffer_8h__dep__incl.map  _circular_buffer_8h__dep__incl.md5  _circular_buffer_8h__incl.map  _circular_buffer_8h__incl.md5  _circular_buffer_8h_source.html  _config_reader_8cpp.html  _config_reader_8cpp__incl.map  _config_reader_8cpp__incl.md5  (+1570 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+97 more)
